HSEARCH-3964 Add configuration to build and run tests against JDK16